[gd_scene load_steps=5 format=3 uid="uid://cdjcv7nokvebj"]

[ext_resource type="Script" uid="uid://c8ro5hydps0up" path="res://llegada.gd" id="1_xpugu"]
[ext_resource type="PackedScene" uid="uid://dl7x1vfy2nale" path="res://src/scenes/Victoria.tscn" id="2_lpbn3"]
[ext_resource type="PackedScene" uid="uid://ckheptltfq8j" path="res://src/audio/audio.tscn" id="3_3qwxi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqq1m"]
size = Vector2(216, 20)

[node name="Llegada" type="Node2D"]
script = ExtResource("1_xpugu")
llegadoNivel = ExtResource("2_lpbn3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(98, 0)
shape = SubResource("RectangleShape2D_sqq1m")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="AudioManager" parent="." instance=ExtResource("3_3qwxi")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
